--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <section id="main_content">
         <h3>
-<a name="welcome-to--my-page-" class="anchor" href="#welcome-to--my-page-"><span class="octicon octicon-link"></span></a>Welcome to  My Page </h3>
+<a name="welcome-to--my-page-" class="anchor" href="#welcome-to--my-page-"><span class="octicon octicon-link"></span></a><blink><marquee>Welcome to My Page</marquee></blink></h3>
       </section>
 
       <footer>
